Fix colour contrast in focused state (#1128)
The white text colour has insufficient contrast wihth the green tint used for the highlighted card in template resources.

--- a/src/css/components/_c-card.scss
+++ b/src/css/components/_c-card.scss
@@ -81,6 +81,17 @@ $_card-outline: $border-thinner solid;
 			background-color: $color-green-tint;
 			border: none;
 		}
+
+		.template-resources &:focus-within {
+
+			.c-card__title,
+			.c-card__meta,
+			.c-card__author,
+			.c-card__description, {
+				color: $color-black;
+			}
+		}
+
 	}
 }
 
